--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 11:49:00 AM</p>
+    <p class="lastupdate">09/15/2020 11:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">78.4&#176;F</td>
+        <td class="data">79.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">78.4&#176;F</td>
+        <td class="data">79.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">78.4&#176;F</td>
+        <td class="data">79.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.7&#176;F</td>
+        <td class="data">47.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">33%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.029 inHg (-0.016)</td>
+        <td class="data">30.027 inHg (-0.020)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.9&#176;F</td>
+        <td class="data">75.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:48:05 AM">
-            78.4</span><br/>
+          <span title="11:53:43 AM">
+            79.0</span><br/>
           <span title="07:07:35 AM">
             49.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:48:05 AM" class="hival">
-            78.4</span>
+          <span title="11:53:43 AM" class="hival">
+            79.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:43:47 AM">
             79</span><br/>
-          <span title="11:37:37 AM">
-            34</span>
+          <span title="11:52:07 AM">
+            33</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          56
+          57
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 21 hours, 2 minutes</td>
+      <td class="data">13 days, 21 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 21 hours, 2 minutes</td>
+      <td class="data">13 days, 21 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
