--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/15/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">79.6&#176;F</td>
+        <td class="data">80.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">79.6&#176;F</td>
+        <td class="data">80.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">79.6&#176;F</td>
+        <td class="data">80.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.9&#176;F</td>
+        <td class="data">48.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.025 inHg (-0.024)</td>
+        <td class="data">30.024 inHg (-0.026)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph S (180&#176;)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.1&#176;F</td>
+        <td class="data">75.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:58:39 AM">
-            79.6</span><br/>
+          <span title="12:03:27 PM">
+            80.3</span><br/>
           <span title="07:07:35 AM">
             49.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:58:39 AM" class="hival">
-            79.6</span>
+          <span title="12:03:27 PM" class="hival">
+            80.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:43:47 AM">
             79</span><br/>
-          <span title="11:52:07 AM">
-            33</span>
+          <span title="12:00:41 PM">
+            32</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          56
+          54
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          215
+          216
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 21 hours, 12 minutes</td>
+      <td class="data">13 days, 21 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 21 hours, 12 minutes</td>
+      <td class="data">13 days, 21 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
