--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/15/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,8 +84,8 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">79.6<br/>
-            <span class="timestamp">11:58:39 AM</span><br/>
+          <td class="data new_row">80.3<br/>
+            <span class="timestamp">12:03:27 PM</span><br/>
             49.7<br/>
             <span class="timestamp">07:07:35 AM</span>
           </td>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">79.6<br/>
-            <span class="timestamp">11:58:39 AM</span>
+          <td class="data new_row">80.3<br/>
+            <span class="timestamp">12:03:27 PM</span>
           </td>
           <td class="data new_row">92.9<br/>
             <span class="timestamp">01:23:25 PM (Monday)</span>
@@ -182,8 +182,8 @@
           <td class="units">%</td>
           <td class="data new_row">79<br/>
             <span class="timestamp">06:43:47 AM</span><br/>
-            33<br/>
-            <span class="timestamp">11:52:07 AM</span>
+            32<br/>
+            <span class="timestamp">12:00:41 PM</span>
           </td>
           <td class="data new_row">95<br/>
             <span class="timestamp">07:40:53 AM (Monday)</span><br/>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            56
+            54
           </td>
           <td class="data new_row">
             1<br/>
@@ -343,7 +343,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            215
+            216
           </td>
           <td class="data new_row">
             2<br/>
