--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 12:04:00 PM</p>
+    <p class="lastupdate">09/15/2020 12:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,23 +50,23 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">80.3&#176;F</td>
+        <td class="data">80.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">80.3&#176;F</td>
+        <td class="data">80.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">80.3&#176;F</td>
+        <td class="data">80.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.6&#176;F</td>
+        <td class="data">48.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">32%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.2&#176;F</td>
+        <td class="data">75.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:27 PM">
-            80.3</span><br/>
+          <span title="12:07:01 PM">
+            80.9</span><br/>
           <span title="07:07:35 AM">
             49.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:27 PM" class="hival">
-            80.3</span>
+          <span title="12:07:01 PM" class="hival">
+            80.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          54
+          48
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 21 hours, 17 minutes</td>
+      <td class="data">13 days, 21 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 21 hours, 17 minutes</td>
+      <td class="data">13 days, 21 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
