--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 12:14:00 PM</p>
+    <p class="lastupdate">09/15/2020 12:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">81.4&#176;F</td>
+        <td class="data">82.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">81.4&#176;F</td>
+        <td class="data">82.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">81.4&#176;F</td>
+        <td class="data">82.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.7&#176;F</td>
+        <td class="data">48.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">32%</td>
+        <td class="data">31%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.024 inHg (-0.025)</td>
+        <td class="data">30.023 inHg (-0.028)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ENE (68&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.4&#176;F</td>
+        <td class="data">75.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:13:41 PM">
-            81.4</span><br/>
+          <span title="12:18:59 PM">
+            82.3</span><br/>
           <span title="07:07:35 AM">
             49.7</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:13:41 PM" class="hival">
-            81.4</span>
+          <span title="12:18:59 PM" class="hival">
+            82.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          47
+          49
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 21 hours, 27 minutes</td>
+      <td class="data">13 days, 21 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 21 hours, 27 minutes</td>
+      <td class="data">13 days, 21 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
